# hyperparameter-optimiser

./: .gitignore  CLAUDE.md  README.md
.claude/: architecture.md
agentic-platform/: .env.example  README.md  docker-compose.yml
agentic-platform/services/optimiser/: Dockerfile  README.md  console.py  main.py  pyproject.toml  serializers.py
agentic-platform/services/optimiser/agents/: __init__.py  analyst.py  base.py  exploiter.py  explorer.py
agentic-platform/services/optimiser/evaluation/: __init__.py  objectives.py
agentic-platform/services/optimiser/orchestration/: __init__.py  blackboard.py  graph.py  nodes.py  state.py
agentic-platform/services/optimiser/problems/: __init__.py  _register.py  loaders.py  objectives.py  registry.py  spaces.py
agentic-platform/services/optimiser/search_space/: __init__.py  space.py
agentic-platform/services/ui/: App.tsx  README.md  index.css  index.html  nginx.conf  package.json
agentic-platform/services/ui/components/: ActivityFeed.tsx  AgentTable.tsx  AnalystInsights.tsx  ProblemSelector.tsx  ScoreChart.tsx  SearchSpaceViz.tsx  StatsPanel.tsx
agentic-platform/services/ui/hooks/: useSwarmSocket.ts
agentic-platform/services/ui/types/: swarm.ts
agentic-platform/shared/schemas/: optimiser-api.json  websocket-events.json
