[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optimiser"
version = "0.1.0"
description = "Hyperparameter optimization service with multi-agent swarm"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "langgraph>=0.0.20",
    "numpy>=1.26.0",
    "scikit-learn>=1.4.0",
    "xgboost>=2.0.0",
    "rich>=13.7.0",
    "websockets>=12.0",
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["problems", "agents", "orchestration", "evaluation", "search_space"]
